--- a/index.html
+++ b/index.html
@@ -2,53 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Find the Perfect Product</title>
+  <title>Reverse Marketplace</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <main class="wrapper">
-    <section class="card">
-      <h1>Tell us what you need</h1>
+  <main class="container">
+    <div class="card">
+      <h1>Describe your need</h1>
       <p class="subtitle">
-        Describe your situation. We’ll find the best products for you.
+        Tell us what you’re looking for and we’ll find the right products for you.
       </p>
 
-      <div class="form-group">
-        <label>What are you looking for?</label>
-        <textarea id="need" placeholder="Example: Gift for a 7-year-old who loves dinosaurs"></textarea>
-      </div>
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="Eg: Gift for 7-year-old who loves dinosaurs"
+      />
 
-      <div class="form-row">
-        <div class="form-group">
-          <label>Category</label>
-          <select id="category">
-            <option value="gifts">Gifts</option>
-            <option value="toys">Toys</option>
-            <option value="electronics">Electronics</option>
-            <option value="home">Home & Living</option>
-            <option value="fashion">Fashion</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label>Max Budget (₹)</label>
-          <input type="number" id="budget" placeholder="1500"/>
-        </div>
-      </div>
-
-      <button class="primary-btn" onclick="search()">
-        Find Best Options
-      </button>
+      <button onclick="handleSearch()">Find Products</button>
 
       <p class="disclaimer">
-        We may earn a small commission from qualifying purchases.
+        This website contains affiliate links. We may earn a commission at no extra cost to you.
       </p>
-    </section>
+    </div>
   </main>
 
+  <script src="config.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
+
