--- a/results.html
+++ b/results.html
@@ -2,26 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Best Matches</title>
+  <title>Results | Reverse Marketplace</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <header class="topbar">
-    <h2>Your Best Matches</h2>
-    <p class="context" id="contextText"></p>
-  </header>
-
-  <main class="results-wrapper">
-    <div id="products" class="product-grid"></div>
+  <main class="container">
+    <div class="card">
+      <h1>Finding the best products for you…</h1>
+      <p class="subtitle">Redirecting to trusted sellers</p>
+    </div>
   </main>
 
-  <footer class="footer-note">
-    We may earn a small commission from qualifying purchases.
-  </footer>
-
-  <script src="search.js"></script>
 </body>
 </html>
