--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:kaleeswaran@example.com">kaleeswaran@example.com</a></p>
-    <p>Fiverr: <a href="https://www.fiverr.com/">My Fiverr Profile</a></p>
-  </section>
+ <!-- Contact Section -->
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>Email: <a href="mailto:kaleessultan415@gmail.com">kaleessultan415@gmail.com</a></p>
+  <p>Mobile: <a href="tel:+916379953691">+91 63799 53691</a></p>
+  <p>Instagram: <a href="https://instagram.com/_kaleez_" target="_blank">kaleez</a></p>
+  <p>Fiverr: <a href="https://www.fiverr.com/" target="_blank">My Fiverr Profile</a></p>
+</section>
 
   <!-- Footer -->
   <footer>
@@ -64,3 +66,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
